--- a/CustomerCare/Views/Shared/_Layout.cshtml
+++ b/CustomerCare/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using CustomerCare.Models.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +30,26 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Tickets" asp-action="Index">My Tickets</a>
+                            </li>
+
+                            @if (User.IsInRole(RoleNames.Admin) || User.IsInRole(RoleNames.Employee))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Tickets" asp-action="Manage">Manage Tickets</a>
+                                </li>
+                            }
+
+                            @if (User.IsInRole(RoleNames.Admin))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="TicketCategories" asp-action="Index">Ticket Categories</a>
+                                </li>
+                            }
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
