--- a/CustomerCare/Views/Tickets/Create.cshtml
+++ b/CustomerCare/Views/Tickets/Create.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <form asp-action="Create" method="post">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="mb-3">
@@ -40,6 +40,12 @@
                     <option value="">-- No Category --</option>
                 </select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="Attachment" class="form-label">Attachment (screenshot)</label>
+                <input asp-for="Attachment" type="file" class="form-control" />
+                <span asp-validation-for="Attachment" class="text-danger"></span>
             </div>
 
             <button type="submit" class="btn btn-primary">Submit Ticket</button>
